[project]
name = "pydobotpp"
dynamic = ["version"]
description = "An extended cross-platform high-level API for the Dobot Magician robotic arm based on pydobotplus."
readme = "README.md"
authors = [{ name = "Kohio DEFLESSELLE", email = "kohiodef@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["pyserial>=3.5"]

license-files = ["LICENSE.md"]
keywords = ["dobot", "robotic arm", "automation", "python", "api", "interface"]

[project.urls]
HomePage = "https://github.com/Soralsei/pydobotplusplus"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
